; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_usbduxsigma.c_usbduxsigma_ao_stop.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_usbduxsigma.c_usbduxsigma_ao_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { %struct.usbduxsigma_private* }
%struct.usbduxsigma_private = type { i64, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.comedi_device*, i32)* @usbduxsigma_ao_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usbduxsigma_ao_stop(%struct.comedi_device* %0, i32 %1) #0 {
  %3 = alloca %struct.comedi_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.usbduxsigma_private*, align 8
  store %struct.comedi_device* %0, %struct.comedi_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.comedi_device*, %struct.comedi_device** %3, align 8
  %7 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %6, i32 0, i32 0
  %8 = load %struct.usbduxsigma_private*, %struct.usbduxsigma_private** %7, align 8
  store %struct.usbduxsigma_private* %8, %struct.usbduxsigma_private** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %24

11:                                               ; preds = %2
  %12 = load %struct.usbduxsigma_private*, %struct.usbduxsigma_private** %5, align 8
  %13 = getelementptr inbounds %struct.usbduxsigma_private, %struct.usbduxsigma_private* %12, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %11
  %17 = load %struct.usbduxsigma_private*, %struct.usbduxsigma_private** %5, align 8
  %18 = getelementptr inbounds %struct.usbduxsigma_private, %struct.usbduxsigma_private* %17, i32 0, i32 2
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.usbduxsigma_private*, %struct.usbduxsigma_private** %5, align 8
  %21 = getelementptr inbounds %struct.usbduxsigma_private, %struct.usbduxsigma_private* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @usbduxsigma_unlink_urbs(i64 %19, i32 %22)
  br label %24

24:                                               ; preds = %16, %11, %2
  %25 = load %struct.usbduxsigma_private*, %struct.usbduxsigma_private** %5, align 8
  %26 = getelementptr inbounds %struct.usbduxsigma_private, %struct.usbduxsigma_private* %25, i32 0, i32 0
  store i64 0, i64* %26, align 8
  ret void
}

declare dso_local i32 @usbduxsigma_unlink_urbs(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
